syntax = "proto3";

package oauthUser;

// "directory/;package_name"
option go_package = "/;oauthUser";

service OAuthUser {
  rpc Add (AddRequest) returns (UUID);
  rpc Update (UpdateRequest) returns (Empty);
  rpc UpdateRole (UpdateRoleRequest) returns (Empty);
  rpc Remove (RemoveRequest) returns (Empty);
  rpc AttachDomains (AttachDomainsRequest) returns (Empty);
  rpc DetachDomains (DetachDomainsRequest) returns (Empty);

  rpc GetById (GetByIdRequest) returns (User);
  rpc GetByUsername (GetByUsernameRequest) returns (User);
  rpc GetAll (GetAllRequest) returns (Users);
  rpc Find (FindRequest) returns (Users);
}

message AddRequest {
  string phone = 1;
  string email = 2;
  string login = 3;
  string password_hash = 4;
  string status = 5;
}

message UpdateRequest {
  string user_id = 1;
  string phone = 2;
  string email = 3;
  string login = 4;
  string password_hash = 5;
  string status = 6;
}

message UpdateRoleRequest {
  string user_id = 1;
  string domain_id = 2;
  string role = 3;
}

message RemoveRequest {
  string user_id = 1;
}

message AttachDomainsRequest {
  string user_id = 1;
  repeated DomainDetail domains = 2;
}

message DetachDomainsRequest {
  string user_id = 1;
  repeated string domain_ids = 2;
}

message GetByIdRequest {
  string user_id = 1;
}

message GetByUsernameRequest {
  string username = 1;
}

message GetAllRequest {
  RequestPagination pagination = 1;
}

message FindRequest {
  string email = 1;
  string login = 2;
  string phone = 3;
  string status = 4;
  RequestPagination pagination = 7;
}

message RequestPagination {
  uint32 page = 1;
  int32 limit = 2;
  uint32 offset = 3;
}

// Responses
message UUID {
  string value = 1;
}

message Empty {
}

message Exist {
  bool exist = 1;
}

message DomainDetail {
  string domain_id = 1;
  string role_id = 2;
}

message User {
  string id = 1;
  string phone = 2;
  string email = 3;
  string login = 4;
  string passwordHash = 5;
  string status = 6;
  repeated DomainDetail domains = 7;
}

message Users {
  uint32 pages_count = 1;
  uint32 total_items = 2;
  uint32 per_page = 3;
  repeated User users = 4;
}